--- a/views/auth/createBlog.ejs
+++ b/views/auth/createBlog.ejs
@@ -1,6 +1,6 @@
 <%- include('../includes/header')-%>
 <section class="container margin-top top">
-  <form action="/auth/create-blog" method="post">
+  <form action="/admin/create-blog" method="post">
     <div class="flex-center padding-md flex-col gap-sm">
       <h1>Create Blog</h1>
       <div class="width-full flex-center flex-col">
