--- a/views/auth/registerForm.ejs
+++ b/views/auth/registerForm.ejs
@@ -6,7 +6,7 @@
         <h1>Registation Form</h1>
         <div class="">
           <label for="name">Name</label
-          ><input class="width-80" type="text" name="name" id="name" required />
+          ><input class="width-80" type="text" name="username" id="name" required />
         </div>
         <div class="">
           <label for="email">Email</label
@@ -15,15 +15,6 @@
         <div class="">
           <label for="password">Password</label
           ><input class="width-80" type="password" name="password" id="password" required />
-        </div>
-        <div class="">
-          <label for="password-confim">Comfim Password</label
-          ><input class="width-80"
-            type="password"
-            name="password-confim"
-            id="password-confim"
-            required
-          />
         </div>
       </div>
       <div class="flex-1">
