--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -33,8 +33,8 @@
           </button>
         </div>
         <div class="noti flex-center click">
-          <a href="/auth/create-blog" class="icon white">
-            <svg 
+          <a href="/admin/create-blog" class="icon white">
+            <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
@@ -80,3 +80,4 @@
         <img src="" alt="" />
       </div>
     </nav>
+
