--- a/views/auth/createBlog.ejs
+++ b/views/auth/createBlog.ejs
@@ -1,6 +1,7 @@
 <%- include('../includes/header')-%>
 <section class="container margin-top top">
   <form action="/admin/create-blog" method="post">
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <div class="flex-center padding-md flex-col gap-sm">
       <h1>Create Blog</h1>
       <div class="width-full flex-center flex-col">
