--- a/public/style.css
+++ b/public/style.css
@@ -12,20 +12,22 @@ body {
   background-color: rgb(199, 161, 238);
   display: flex;
   justify-content: center;
+  font-family: "Mukta", sans-serif;
 }
 section {
-  width: 100%;
+  width: 1180px;
   height: 100vh;
-  background-color: rgb(199, 161, 238);
-  padding: 20px 30px;
-  position: absolute;
-  left: 108px;
+  padding: 10px 20px;
+  margin: 0 auto;
+  position: relative;
+  margin-top: 80px;
 }
 
 nav {
   background-color: rgb(199, 161, 238);
 }
 a {
+  display: block;
   text-decoration: none;
   color: #ffffff;
 }
@@ -33,25 +35,25 @@ h1 {
   font-size: 35px;
   color: #280155;
 }
-h2 {
-  font-size: 25px;
-  color: #280155;
-}
-h3 {
-  font-size: 20px;
-  color: #280155;
-}
 button {
   background-color: transparent;
   border: none;
   outline: none;
 }
+label {
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  color: #280155;
+}
 p {
   font-size: 16px;
-  color: #000000;
+  font-weight: 600;
+  color: #0c0514;
 }
 input,
 textarea {
+  display: block;
   border: none;
   outline: none;
   border-radius: 10px;
@@ -59,60 +61,27 @@ textarea {
   padding: 10px 20px;
   box-shadow: 5px 5px 10px rgb(71, 71, 71);
   font-size: 16px;
+  overflow-y: scroll;
+  scrollbar-width: none;
 }
-label {
-  display: block;
-  font-size: 18px;
-  font-weight: 600;
-  color: #280155;
-}
-.form {
-  padding: 20px;
-  width: 1080px;
-  height: auto;
-  margin: 10px auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-.container {
-  width: 1080px;
+
+.nav-container {
+  position: fixed;
+  width: 1180px;
   margin: 0 auto;
-}
-.flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.flex-between {
+  box-shadow: 5px 5px 10px rgb(61, 60, 60);
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 10px 20px;
+  border-radius: 10px;
+  z-index: 10;
 }
-.flex-start{
+.nav-inner {
   display: flex;
-  align-items: start;
+  align-items: center;
   justify-content: center;
-}
-.flex-1 {
-  flex: 1;
-  width: calc(100%-40%);
-}
-.flex-col {
-  flex-direction: column;
-}
-.flex-row {
-  flex-direction: row;
-}
-.flex-wrap {
-  flex-wrap: wrap;
-}
-.gap-sm {
   gap: 10px;
-}
-.gap-md {
-  gap: 20px;
 }
 .btn {
   padding: 8px 20px;
@@ -128,125 +97,127 @@ label {
   &:hover {
     background: rgba(3, 128, 212, 0.541);
   }
+  &:active {
+    scale: 0.8;
+  }
 }
-.width-full {
-  width: 100%;
-}
-.width-80 {
-  width: 80%;
-}
-.margin-top {
-  margin-top: 10px;
-}
-.margin-bott {
-  margin-bottom: 10px;
-}
-.padding-sm {
-  padding: 10px 20px;
-}
-.padding-md {
-  padding: 15px 30px;
-}
-.shadow-sm {
-  box-shadow: 5px 5px 10px rgb(63, 62, 62);
-}
-.rounded-sm {
-  border-radius: 10px;
-}
-.rounded-md {
-  border-radius: 20px;
-}
-.red {
-  color: rgb(202, 0, 0);
-}
-.bg-red {
-  background-color: rgb(202, 0, 0);
-}
-.relative {
-  position: relative;
-}
-.absolute {
-  position: absolute;
-}
-.fixed {
-  position: fixed;
-  z-index: 1;
-  top: 10px;
-}
-
-.inner {
-  top: 10px;
-  right: 5px;
+.btn-rounded {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45px;
+  height: 45px;
+  cursor: pointer;
+  border-radius: 50%;
+  border: none;
+  background: rgb(153, 0, 255);
+  font-size: 16px;
+  box-shadow: 5px 5px 10px rgb(49, 48, 48);
+  color: white;
+  transition: all 0.3s ease-in;
+  &:hover {
+    background: rgba(3, 128, 212, 0.541);
+  }
+  &:active {
+    scale: 0.8;
+  }
 }
 .icon {
   position: relative;
   width: 30px;
   height: 30px;
-  color: #302f2f;
   cursor: pointer;
-}
-.noti {
-  background-color: #280155;
-  border-radius: 12px;
-  width: 40px;
-  height: 40px;
-  position: relative;
-  cursor: pointer;
-}
-.white {
-  color: white;
-}
-.beget {
-  color: rgb(255, 255, 255);
-  position: absolute;
-  right: -6px;
-  top: -13px;
-  display: inline-block;
-  width: 23px;
-  height: 23px;
-  border-radius: 50%;
-  background-color: red;
-  text-align: center;
-  font-size: 14px;
-}
-.avatar {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  overflow: hidden;
+  border-radius: 10px;
 }
 
-.ava-image {
+.white {
+  color: white !important;
+}
+.red {
+  color: rgb(202, 11, 11);
+}
+.w-full {
   width: 100%;
-  height: 100%;
+}
+.avatar {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  overflow: hidden;
+  cursor: pointer;
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+.hero-title {
+  font-size: 45px;
+}
+.blog-container {
+  margin-top: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.blog-card {
+  width: 340px;
+  padding: 5px 10px;
+}
+.card_img {
+  width: 100%;
+  height: 140px;
   object-fit: cover;
 }
-.click {
-  transition: all 0.3s ease-in;
-  &:hover {
-    opacity: 0.6;
-  }
-  &:active {
-    scale: 0.9;
-  }
-}
-.bold {
-  font-size: 45px;
+.card-title {
+  font-size: 20px;
   font-weight: 800;
+  text-decoration: underline;
+  margin-bottom: 5px;
 }
-.text-center {
-  text-align: center;
+.flex-between {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.top {
-  top: 50px;
+.mt-auto {
+  margin-top: auto;
 }
-.cover {
+.register {
+  width: 450px;
+  background-color: #8c62bd;
+  padding: 15px 20px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  margin: auto;
+}
+.error-status {
+  color: red;
+  background-color: yellow;
+}
+
+.inner-form {
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
+}
+.detail-img {
   width: 100%;
-  height: 330px;
+  height: 400px;
+  object-fit: cover;
 }
-.margin-auto {
-  margin: 0 auto;
+.detail-title {
+  font-size: 35px;
+  font-weight: 800;
+  text-decoration: underline;
 }
-.self-start {
-  align-self: flex-start;
+
+.mt-10 {
+  margin-top: 10px;
+}
+.bg-red {
+  background-color: rgb(201, 2, 2);
 }
