--- a/views/auth/createBlog.ejs
+++ b/views/auth/createBlog.ejs
@@ -1,24 +1,41 @@
 <%- include('../includes/header')-%>
-<section class="container margin-top top">
-  <form action="/admin/create-blog" method="post">
-    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-    <div class="flex-center padding-md flex-col gap-sm">
-      <h1>Create Blog</h1>
-      <div class="width-full flex-center flex-col">
-        <label for="title" class="self-start">Title</label
-        ><input class="width-full" type="text" name="title" id="title" required />
+<section>
+  <div class="register">
+    <h1>Create Blog</h1>
+    <form action="/admin/create-blog" method="post" class="inner-form">
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+      <div class="flex-center">
+        <div class="w-full ">
+          <label for="title" class="self-start">Title</label
+          ><input
+            class="w-full"
+            type="text"
+            name="title"
+            id="title"
+            required
+          />
+        </div>
+        <div class="w-full">
+          <label class="self-start" for="imgUrl">Image</label
+          ><input
+            class="w-full"
+            type="text"
+            name="imgUrl"
+            id="imgUrl"
+            required
+          />
+        </div>
+        <div class="w-full mt-10">
+          <label for="description">Description</label
+          ><textarea
+            name="description"
+            id="description"
+            cols="50" rows="5"
+          ></textarea>
+        </div>
       </div>
-      <div class="width-full flex-center flex-col">
-        <label class="self-start" for="imgUrl">Image</label
-        ><input class="width-full" type="text" name="imgUrl" id="imgUrl" required />
-      </div>
-      <div class="width-full flex-center flex-col">
-        <label class="self-start" for="description">Description</label
-        ><textarea  name="description" id="description" cols="128" rows="5"></textarea>
-      </div>
-     
-    </div>
-    <button class="btn">Register</button>
-  </form>
+      <button class="btn mt-10">Create</button>
+    </form>
+  </div>
 </section>
 <%- include('../includes/footer')-%>
