--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -7,33 +7,13 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <nav class="container flex-between padding-sm shadow-sm rounded-sm fixed">
+    <nav class="nav-container">
       <a href="/">
         <h1>Blog.<span class="red">io</span></h1></a
       >
-      <div class="flex-center gap-sm">
-        <div class="relative">
-          <input type="text" placeholder=" Search..." />
-          <button class="absolute inner">
-            <svg
-              class="icon"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="size-6"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
-              />
-            </svg>
-          </button>
-        </div>
+      <div class="nav-inner">
         <%if(isLogin){%>
-        <div class="noti flex-center click">
+        <div class="btn-rounded">
           <a href="/admin/create-blog" class="icon white">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -50,24 +30,6 @@
               />
             </svg>
           </a>
-        </div>
-        <div class="noti flex-center">
-          <svg
-            class="icon white"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="size-6"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0M10.5 8.25h3l-3 4.5h3"
-            />
-          </svg>
-          <span class="beget">0</span>
         </div>
         <div class="avatar">
           <img
