--- a/views/auth/resetPassword.ejs
+++ b/views/auth/resetPassword.ejs
@@ -1,18 +1,20 @@
 <%- include('../includes/header')-%>
-<section class="container margin-top top">
-  <form action="/auth/reset-password" method="post" class=" form ">
-    <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-    <div class=" flex-start gap-md width-full padding-md flex-col">
-      <h1>Reset Password Page</h1>
-      <%if(errorMsg){%>
-      <p class="bg-red width-full"><%= errorMsg%></p>
-      <%}%>
-      <div class="width-full">
-        <label for="email">Email</label
-        ><input class="width-80" type="text" name="email" id="email" required />
+<section>
+  <div class="register">
+    <h1>Reset Password Page</h1>
+    <form action="/auth/reset-password" method="post" class="inner-form">
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+      <div class="w-full">
+        <%if(errorMsg){%>
+        <p class="error-status w-full"><%= errorMsg%></p>
+        <%}%>
+        <div class="w-full">
+          <label for="email">Email</label
+          ><input class="w-full" type="text" name="email" id="email" required />
+        </div>
+        <button class="btn mt-10">Reset Password</button>
       </div>
-      <button class="btn">Reset Password</button>
-    </div>
-  </form>
+    </form>
+  </div>
 </section>
 <%- include('../includes/footer')-%>
