--- a/views/auth/loginForm.ejs
+++ b/views/auth/loginForm.ejs
@@ -9,11 +9,25 @@
       <%}%>
       <div class="w-full">
         <lable for="email">Email</lable>
-        <input type="text" id="email" name="email" class="w-full" required />
+        <input
+          type="text"
+          id="email"
+          name="email"
+          class="w-full"
+          required
+          value="<%=oldData.email%>"
+        />
       </div>
       <div class="w-full">
         <lable for="password">Password</lable>
-        <input type="password" id="password" name="password" class="w-full" required />
+        <input
+          type="password"
+          id="password"
+          name="password"
+          class="w-full"
+          required
+          value="<%=oldData.password%>"
+        />
       </div>
       <a href="/auth/reset-password">Forget password!</a>
       <button class="btn">Login</button>
